Fix #instructor's text overlapping on mobile
Using flexbox with a width ratio of 2:10 for the two children fixes the text overlap on mobile devices, while at the same time rendering the same on desktop

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -66,14 +66,15 @@ p, ul{
         font-size: 42px;
     }
     #instructor {
-      .make-row();
+      display: flex;
       font-size: @jumbotron-font-size;
+
       div:first-child{
-        .make-xs-column(2);
+        flex-grow: 1;
         font-weight:bold;
       }
       div:last-child {
-        .make-xs-column(10);
+        flex-grow: 5;
       }
     }
 }
